# profile-generator

./: .gitignore  main.py  pyproject.toml
assets/home-page/src/: index.html  style.css
src/: utils.py
src/infra/: __init__.py  logger.py
src/infra/selenium/: __init__.py  custom_api.py  driver.py  utilities.py
src/models/: profile_generator.py
src/services/credentials_manager/: __init__.py  manager.py
src/services/login/: __init__.py  factory.py  login_factory.py  login_services.py  models.py  service_registry.py  services.py
src/services/profile_manager/: __init__.py  manager.py
